package saifedine.week22_weekend6.CarsimExtended;

public class CrapCar {
}
